--- a/templates/index.html
+++ b/templates/index.html
@@ -81,6 +81,17 @@
         </div>
 
       </div>
+
+      <div class="col-md-4">
+        <h5 id="sampling_header">Most Liked Comments</h5>
+        <div id="sampling"></div>
+      </div>
+
+      <div class="col-md-4">
+        <h5 id="all_sampling_header">All Comments</h5>
+        <div id="all_sampling"></div>
+      </div>
+
     </div>
   </div>
 
@@ -88,7 +99,7 @@
   <script src="/static/js/bootstrap.min.js"></script>
   <script async src="//www.google-analytics.com/analytics.js"></script>
 
-  <script src="/static/js/build/comentarismo-moody-client-min.js"></script>
+  <script src="/static/js/build/comentarismo-moody-client.js"></script>
   <script type="text/javascript">
     $(function() {
       var selector = "#comments-list";
