--- a/templates/index.html
+++ b/templates/index.html
@@ -1,111 +1,122 @@
 <html>
 <head>
-  <title>Comentarismo Moody</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/static/css/main.css" rel="stylesheet">
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+    <title>Comentarismo Moody</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/css/main.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+<div class="container">
 
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Comentarismo Report</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse col-xs-12 col-md-12 col-lg-12">
-          <form class="navbar-form navbar-left form-horizontal" role="search" method="get">
-            <div>
-              <input type="text" class="form-control" placeholder="Post URL" name="vid">
-              <button type="submit" class="btn btn-default">Run</button>
+    <div class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                Paste a Youtube or Facebook URL below And Get a <b>Free</b> Sentiment <b>Analysis</b> Right <b>Now!</b>
             </div>
-          </form>
-          <ul class="nav navbar-nav">
-
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://github.com/mikeflynn/quackerjack">Powered by Comentarismo</a></li>
-          </ul>
         </div>
-      </div>
+    </div>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <span class="navbar-brand">Comentarismo, Sentiment Analyzer</span>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse col-xs-12 col-md-12 col-lg-12">
+                <form class="navbar-form navbar-left form-horizontal" role="search" method="get">
+                    <div>
+                        <input type="text" class="form-control" placeholder="Post URL" name="vid" style="width: 350px;">
+                        <button type="submit" class="btn btn-default">Run</button>
+                    </div>
+                </form>
+                <ul class="nav navbar-nav">
+
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <div id="loading">
-      Reading comments...
-      <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-          </div>
+        Reading comments...
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100"
+                 aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+            </div>
         </div>
     </div>
+
 
     <div id="report">
-      <div id="header" class="stroke">
-        <h1 id="video_title"></h1>
-        <h4>
-          <span id="channel_title"></span> on <span id="network_title"></span>
-        </h4>
+        <div id="header" class="stroke">
+            <h1 id="video_title"></h1>
+            <h4>
+                <span id="channel_title"></span> on <span id="network_title"></span>
+            </h4>
 
-        <hr />
+            <hr/>
 
-        <div class="row bignums">
-          <div class="col-xs-4 col-xs-offset-4">
-            <span id="total_comments">0</span>
-            <span class="desc">Total Comments</span>
-          </div>
-          <div class="col-xs-4">
-            <span id="comments_per_day">0</span>
-            <span class="desc">By Day</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-          Comments Analyzed: 0%
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-5">
-          <h5>What people think about this: </h5>
-          <canvas id="myChart" width="100%" height="300"></canvas>
+            <div class="row bignums">
+                <div class="col-xs-4 col-xs-offset-4">
+                    <span id="total_comments">0</span>
+                    <span class="desc">Total Comments</span>
+                </div>
+                <div class="col-xs-4">
+                    <span id="comments_per_day">0</span>
+                    <span class="desc">By Day</span>
+                </div>
+            </div>
         </div>
 
-      </div>
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                 aria-valuemax="100" style="width: 0%;">
+                Comments Analyzed: 0%
+            </div>
+        </div>
 
-      <div class="col-md-4">
-        <h5 id="sampling_header">Most Liked Comments</h5>
-        <div id="sampling"></div>
-      </div>
+        <div class="row">
 
-      <div class="col-md-4">
-        <h5 id="all_sampling_header">All Comments</h5>
-        <div id="all_sampling"></div>
-      </div>
+            <div class="col-md-5">
+                <h5>Sentiment Statistics: </h5>
+                <canvas id="myChart" width="100%" height="300"></canvas>
+            </div>
+            <div class="col-md-2">
+                <h5>Scale of values </h5>
+                <canvas id="scaleChart" width="100%" height="300"></canvas>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <h5 id="sampling_header">Most Liked Comments</h5>
+            <div id="sampling"></div>
+        </div>
+
+        <div class="col-md-4">
+            <h5 id="all_sampling_header">All Comments</h5>
+            <div id="all_sampling"></div>
+        </div>
 
     </div>
-  </div>
+</div>
 
-  <script src="/static/js/jquery.min.js"></script>
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script async src="//www.google-analytics.com/analytics.js"></script>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script async src="//www.google-analytics.com/analytics.js"></script>
 
-  <script src="/static/js/build/comentarismo-moody-client.js"></script>
-  <script type="text/javascript">
-    $(function() {
-      var selector = "#comments-list";
-      var comentarismo = new ComentarismoMoody({
-        selector: selector
-      });
+<script src="/static/js/build/comentarismo-moody-client.js"></script>
+<script type="text/javascript">
+    $(function () {
+        var selector = "#comments-list";
+        var comentarismo = new ComentarismoMoody({
+            selector: selector
+        });
     });
-  </script>
+</script>
 </body>
 </html>
