--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,11 @@
             <div id="navbar" class="navbar-collapse collapse col-xs-12 col-md-12 col-lg-12">
                 <form class="navbar-form navbar-left form-horizontal" role="search" method="get">
                     <div>
-                        <input type="text" class="form-control" placeholder="Post URL" name="vid" style="width: 350px;">
+                        <input type="radio" name="lang" value="en" checked/> English
+                        <input type="radio" name="lang" value="es"/> Spanish
+                        <input type="radio" name="lang" value="pt"/> Portuguese
+                        <input type="radio" name="lang" value="pt"/> Italian
+                        <input type="text" class="form-control" placeholder="Post URL" name="vid" id="vid" style="width: 350px;">
                         <button type="submit" class="btn btn-default">Run</button>
                     </div>
                 </form>
