#44 - normalize likes/dislike, sentiment and ID to standard used on api

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,8 @@
                 'replybtn: "/static/img/comentarismo_reply.jpg",'+
                 'replybtn_style: "width: 10px;height: 10px;"'+
                 '},'+
-                'page:\''+decodeURIComponent((new RegExp('[?|&]' + "vid" + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20'))+'\',' +
+//                'page:\''+decodeURIComponent((new RegExp('[?|&]' + "vid" + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20'))+'\',' +
+                'page:"ca7d51b2-0a28-560e-8d44-ada1f093ea7d",' +
                 'cached:"api.comentarismo.com/elk",'+
                 'host:"api.comentarismo.com",'+
                 'reco:"myid",'+
